[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/player/player.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "step"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0.5 ), Vector3( 0.02, 1.02, 0.5 ), Vector3( 0, 1, 0.5 ), Vector3( -0.02, 1.02, 0.5 ), Vector3( 0, 1, 0.5 ) ]
}

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 1, 0.5 )

[node name="Light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
light_color = Color( 1, 0.996078, 0.835294, 1 )
light_energy = 0.795
shadow_enabled = true
omni_range = 7.66
omni_attenuation = 1.56917

[node name="Tween" type="Tween" parent="."]

[node name="RayForward" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayBack" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 2 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayRight" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayLeft" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( -2, 0, 0 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
light_color = Color( 1, 0.956863, 0.835294, 1 )
light_energy = 2.0
spot_attenuation = 2.37841
spot_angle = 64.36
spot_angle_attenuation = 3.03143

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/step = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="on_timer_timeout"]
